--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
+  
 
 }
+
 
 li {
   display: flex;
@@ -56,7 +58,7 @@ footer {
 }
 
 #boton {
-  color: rgb(39, 39, 185);
+  border-color:  rgb(240, 71, 105) !important
 }
 
 #logo1, #logo2, #logo3 {
@@ -107,11 +109,76 @@ small.text-muted {
   color: rgb(39, 39, 185) !important;
   font-size: 17px;
 }
-
+/* 
 #cont1, #cont2, #cont3, #cont4, #cont5, #cont6 {
   max-width: 1324px !important;
-}
+} */
 
 #contactmain {
   margin-bottom: 158px !important;
+}
+
+.nav-item.current a {
+  background-color:rgb(240 71 105 / .5) !important; 
+  color: white !important;
+}
+#search-bar{
+  border-color:rgba(74, 71, 240, 0.5) !important; 
+}
+.btn-outline-info{
+ margin-left: .5rem;
+ margin-right: .5rem;
+  color:rgb(84, 84, 177) !important;
+
+}
+.btn-outline-info:hover{
+  background-color:rgb(243, 206, 213)!important;
+  color:  rgb(84, 84, 177) !important;
+  
+}
+
+#nav{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction:row;
+  align-content: space-around;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  background-color:rgba(74, 71, 240, 0.5) !important; 
+}
+
+#form
+{margin-bottom: .5rem;
+  margin-top: .4rem;
+  margin-left: .8rem;
+}
+
+#CardsIndex, #CardsPastE, #CardsUpcomingE{
+  border-radius: 1rem;
+  background-color: rgb(240 71 105 / .2) !important;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  padding-bottom: 1.5rem; 
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+/* 
+.carousel-item img {
+  width: 85%;
+  height: 22rem;
+  border-radius: 2rem;
+  -webkit-border-radius: 2rem;
+  -moz-border-radius: 2rem;
+  -ms-border-radius: 2rem;
+  -o-border-radius: 2rem;
+}  */
+
+.details-conteiner{
+  padding: 20rem !important;
+  margin-bottom: 10rem;
 }
